--- a/MP3-Player/src/Main.mxml
+++ b/MP3-Player/src/Main.mxml
@@ -10,9 +10,9 @@
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
-			import Media.Play;
-			import Media.PlayList;
-			import Media.PlayListCollection;
+			import media.Play;
+			import media.PlayList;
+			import media.PlayListCollection;
 			
 			import mx.collections.Sort;
 			import mx.collections.SortField;
