Adding PopupTweet.mxml
Signed-off-by: alexandre <alexandr.barbier@gmail.com>

--- a/MP3-Player/src/Main.mxml
+++ b/MP3-Player/src/Main.mxml
@@ -99,7 +99,8 @@
 			// Send the rate to the tweeter account
 			protected function tweeter_clickHandler(event:MouseEvent):void
 			{				
-				/// TODO
+				var p:PopupTweet = new PopupTweet();
+				p.open();
 			}
 			
 			//
